--- a/block_5/exerc.html
+++ b/block_5/exerc.html
@@ -52,6 +52,11 @@ function changeText() {
 }
 changeText()
 //Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+function changeColor() {
+  const getSquare = document.getElementsByClassName('main-content')[0];
+  getSquare.style.background = "rgb(76,164,109)";
+}
+changeColor();
 //Crie uma função que mude a cor do quadrado vermelho para branco.
 //Crie uma função que corrija o texto da tag <h1>.
 //Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
