Exercicio 4 - Dia 1 - Bloco 5

--- a/block_5/exerc.html
+++ b/block_5/exerc.html
@@ -46,24 +46,29 @@
         - document.getElementsByTagName()
 */
 //Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
-function changeText() {
+function changeParagraphText() {
   const getParagraph = document.getElementsByTagName('p')[1];
   getParagraph.innerText = "Vou estar construindo uma carreira muito interessante.";
 }
-changeText();
+changeParagraphText();
 //Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
 function changeToGreen() {
   const getSquare = document.getElementsByClassName('main-content')[0];
   getSquare.style.background = "rgb(76,164,109)";
 }
-changeToGreen();
+changeSquareToGreen();
 //Crie uma função que mude a cor do quadrado vermelho para branco.
 function changeToWhite() {
   const getSquare = document.getElementsByClassName('center-content')[0];
   getSquare.style.background = "white";
 }
-changeToWhite();
+changeSquareToWhite();
 //Crie uma função que corrija o texto da tag <h1>.
+function changeHeadingText() {
+  const getHeading = document.getElementsByClassName('title')[0];
+  getHeading.innerText = "Exercício 5.1 - JavaScript"
+}
+changeHeadingText();
 //Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
 //Crie uma função que exiba o conteúdo de todas as tags <p> no console.
 
