--- a/block_5/day_1/exerc.html
+++ b/block_5/day_1/exerc.html
@@ -45,37 +45,37 @@
         - document.getElementsByClassName()
         - document.getElementsByTagName()
 */
-//Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
+//1. Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
 function changeParagraphText() {
   const getParagraph = document.getElementsByTagName('p')[1];
   getParagraph.innerText = "Vou estar construindo uma carreira muito interessante.";
 }
 changeParagraphText();
-//Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+//2. Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
 function changeSquareToGreen() {
   const getSquare = document.getElementsByClassName('main-content')[0];
   getSquare.style.background = "rgb(76,164,109)";
 }
 changeSquareToGreen();
-//Crie uma função que mude a cor do quadrado vermelho para branco.
+//3. Crie uma função que mude a cor do quadrado vermelho para branco.
 function changeSquareToWhite() {
   const getSquare = document.getElementsByClassName('center-content')[0];
   getSquare.style.background = "white";
 }
 changeSquareToWhite();
-//Crie uma função que corrija o texto da tag <h1>.
+//4. Crie uma função que corrija o texto da tag <h1>.
 function changeHeadingText() {
   const getHeading = document.getElementsByClassName('title')[0];
   getHeading.innerText = "Exercício 5.1 - JavaScript"
 }
 changeHeadingText();
-//Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
+//5. Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
 function changeParagraphText2() {
   const getParagraph = document.getElementsByTagName('p')[0];
   getParagraph.innerText = getParagraph.innerText.toUpperCase();
 }
 changeParagraphText2();
-//Crie uma função que exiba o conteúdo de todas as tags <p> no console.
+//6. Crie uma função que exiba o conteúdo de todas as tags <p> no console.
 function showParagraph() {
   const getParagraphs = document.getElementsByTagName('p');
   for (let index = 0; index < getParagraphs.length; index += 1) {
