--- a/block_5/day_2/exerc.html
+++ b/block_5/day_2/exerc.html
@@ -62,6 +62,10 @@
     const addH1 = document.createElement('h1');
     addH1.innerHTML = 'Exercício 5.2 - JavaScript DOM';
     document.body.appendChild(addH1);
+    // 2. Adicione a tag div com a classe main-content como filho da tag body ;
+    const addDivMain = document.createElement('div');
+    addDivMain.class = 'main-content';
+    document.body.appendChild(addDivMain);
     </script>
   </body>
 </html>
