Exercicio 4 - Dia 2 - Bloco 5

--- a/block_5/day_2/exerc.html
+++ b/block_5/day_2/exerc.html
@@ -70,6 +70,10 @@
     const addDivCenter = document.createElement('div');
     addDivCenter.className = 'center-content';
     addDivMain.appendChild(addDivCenter);
+    // 4. Adicione a tag p como filho do div criado no passo 3 e coloque algum texto;
+    const addParagraph = document.createElement('p');
+    addParagraph.innerHTML = 'Trybe';
+    addDivCenter.appendChild(addParagraph);
     </script>
   </body>
 </html>
