Exercicio 5 - Dia 2 - Bloco 5

--- a/block_5/day_2/exerc.html
+++ b/block_5/day_2/exerc.html
@@ -74,6 +74,10 @@
     const addParagraph = document.createElement('p');
     addParagraph.innerHTML = 'Trybe';
     addDivCenter.appendChild(addParagraph);
+    // 5. Adicione a tag div com a classe left-content como filho da tag div criada no passo 2;
+    const addDivLeft = document.createElement('div');
+    addDivLeft.className = 'left-content';
+    addDivCenter.appendChild(addDivLeft);
     </script>
   </body>
 </html>
