Exercicio 8 - Dia 2 - Bloco 5

--- a/block_5/day_2/exerc.html
+++ b/block_5/day_2/exerc.html
@@ -87,6 +87,15 @@
     addImage.src = 'https://picsum.photos/200';
     addImage.className = 'small-image';
     addDivLeft.appendChild(addImage);
+    // 8. Adicione uma lista não ordenada com os valores de 1 a 10 por extenso como valores da lista. Essa lista deve ser filha do div criado no passo 6;
+    const addUl = document.createElement('ul');
+    addDivRight.appendChild(addUl);
+    for (index = 0; index < 10; index += 1) {
+      const addLi = document.createElement('li');
+      addLi.innerHTML = index + 1;
+      addUl.appendChild(addLi);
+    }
+    
     </script>
   </body>
 </html>
