--- a/block_5/day_2/exerc.html
+++ b/block_5/day_2/exerc.html
@@ -90,12 +90,16 @@
     // 8. Adicione uma lista não ordenada com os valores de 1 a 10 por extenso como valores da lista. Essa lista deve ser filha do div criado no passo 6;
     const addUl = document.createElement('ul');
     addDivRight.appendChild(addUl);
-    for (index = 0; index < 10; index += 1) {
+    for (index = 1; index <= 10; index += 1) {
       const addLi = document.createElement('li');
-      addLi.innerHTML = index + 1;
+      addLi.innerHTML = index;
       addUl.appendChild(addLi);
     }
-    
+    // 9. Adicione 3 tags h3 , todas sendo filhas do div criado no passo 2.
+    for (index = 1; index <= 3; index += 1) {
+      const addH3 = document.createElement('h3');
+      addDivMain.appendChild(addH3);
+    }
     </script>
   </body>
 </html>
