--- a/block_5/day_2/exerc2.html
+++ b/block_5/day_2/exerc2.html
@@ -103,16 +103,19 @@
     }
     // Parte 2
     // 1. Adicione a classe title na tag h1 criada;
-    const getH1 = document.getElementsByTagName('h1')[0]
+    const getH1 = document.getElementsByTagName('h1')[0];
     getH1.className = 'title';
     // 2. Adicione a classe description nas 3 tags h3 criadas;
-    const getH3 = document.getElementsByTagName('h3')
+    const getH3 = document.getElementsByTagName('h3');
     for (index = 0; index < getH3.length; index += 1) {
       getH3[index].className = 'description';
     }
     // 3. Remova o div criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
-    const getDivLeft = document.getElementsByClassName('left-content')[0]
+    const getDivLeft = document.getElementsByClassName('left-content')[0];
     addDivMain.removeChild(getDivLeft);
+    // 4. Centralize o div criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto do div ;
+    const getDivRight = document.getElementsByClassName('right-content')[0];
+    getDivRight.style.marginRight = 'auto';
     </script>
   </body>
 </html>
