--- a/block_5/day_2/exerc2.html
+++ b/block_5/day_2/exerc2.html
@@ -119,6 +119,10 @@
     // 5. Troque a cor de fundo do elemento pai da div criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
     const getDivCenter = document.getElementsByClassName('center-content')[0];
     getDivCenter.parentNode.style.background = 'green';
+    // 6. Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
+    const getUl = document.getElementsByTagName('ul')[0];
+    getUl.lastChild.remove();
+    getUl.lastChild.remove();
     </script>
   </body>
 </html>
