--- a/Web_Development_Fundamentals/block_6/day_1/form.html
+++ b/Web_Development_Fundamentals/block_6/day_1/form.html
@@ -57,9 +57,12 @@
           <input type="text" name="start-date" id="start-date" value="" placeholder="dd/mm/yyyy" onchange="validateInputDate()" required>
         </div>
       </fieldset>
-      <button class="submit-button" type="button">Enviar</button>
-      <button class="clear-button" type="button">Limpar</button>
+      <button id="submit-button" type="button" onclick="submitButton(event)">Enviar</button>
+      <button id="clear-button" type="button">Limpar</button>
     </form>
+    <section id="submited-information">
+      <p>Informações</p>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
