Exercicio 4 - Dia 1 - Bloco 6

--- a/Web_Development_Fundamentals/block_6/day_1/form.html
+++ b/Web_Development_Fundamentals/block_6/day_1/form.html
@@ -58,7 +58,7 @@
         </div>
       </fieldset>
       <button id="submit-button" type="button" onclick="submitButton(event)">Enviar</button>
-      <button id="clear-button" type="button">Limpar</button>
+      <button id="clear-button" type="button" onclick="clearButton()">Limpar</button>
     </form>
     <section id="submited-information">
       <p>Informações</p>
