--- a/Web_Development_Fundamentals/block_6/day_2/form.html
+++ b/Web_Development_Fundamentals/block_6/day_2/form.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./lib/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/DatePickerX.min.css">
     <title>Formulário</title>
   </head>
   <body>
@@ -55,7 +56,7 @@
         </div>
         <div>
           <label for="start-date">Data de início: </label>
-          <input type="text" name="start-date" id="start-date" value="" placeholder="dd/mm/yyyy" onchange="validateInputDate()" required>
+          <input type="text" name="start-date" id="start-date" value="" placeholder="dd/mm/aaaa" required>
         </div>
       </fieldset>
       <button id="submit-button" type="button" onclick="submitButton(event)">Enviar</button>
@@ -64,6 +65,7 @@
     <section id="submited-information">
       <p>Informações</p>
     </section>
+    <script src="lib/DatePicker.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
